[gd_scene load_steps=12 format=3 uid="uid://b0lqm45h8177a"]

[ext_resource type="PackedScene" uid="uid://d1opgus8oy0s2" path="res://Sprites/Player.tscn" id="1_eil7l"]
[ext_resource type="Script" path="res://Scenes/Map.gd" id="1_x7tma"]
[ext_resource type="PackedScene" uid="uid://ubrfbm4i0ttf" path="res://Sprites/spike.tscn" id="2_2hbjn"]
[ext_resource type="Texture2D" uid="uid://d1jopgd02ycop" path="res://Assets/Sprites/Map1.png" id="2_484jh"]
[ext_resource type="PackedScene" uid="uid://bmmxsm1aa18a6" path="res://Sprites/UILifeSupply.tscn" id="3_gjw1o"]
[ext_resource type="Texture2D" uid="uid://dt64653jx61h" path="res://Assets/Sprites/life_counter_b.png" id="4_0jpcu"]
[ext_resource type="PackedScene" uid="uid://bbii5ncuy7hi3" path="res://Sprites/UITeam1Victory.tscn" id="4_drhtd"]
[ext_resource type="Texture2D" uid="uid://ncqkehclmr1e" path="res://Assets/Sprites/life_counter_r.png" id="5_hxww0"]
[ext_resource type="PackedScene" uid="uid://djy0ouigy4p4e" path="res://Sprites/UITeam2Victory.tscn" id="5_p4m3y"]
[ext_resource type="Texture2D" uid="uid://b8hiwgdb4hpii" path="res://Assets/Sprites/rock.png" id="9_tcwpg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gsn2s"]
resource_local_to_scene = true
size = Vector2(18.7935, 19.3493)

[node name="Map1" type="Node2D"]
script = ExtResource("1_x7tma")

[node name="BG" type="TextureRect" parent="."]
offset_left = -1.0
offset_top = -12.0
offset_right = 1155.0
offset_bottom = 647.0
texture = ExtResource("2_484jh")
metadata/_edit_lock_ = true

[node name="UI" type="Node" parent="."]

[node name="TeamLifeSupply1" type="Node2D" parent="UI"]
modulate = Color(1, 1, 1, 0.513726)
position = Vector2(54, 626)

[node name="Life1" parent="UI/TeamLifeSupply1" instance=ExtResource("3_gjw1o")]
position = Vector2(-25, 7)
scale = Vector2(2, 2)
texture = ExtResource("4_0jpcu")

[node name="Life2" parent="UI/TeamLifeSupply1" instance=ExtResource("3_gjw1o")]
position = Vector2(0, -5)
scale = Vector2(2, 2)
texture = ExtResource("4_0jpcu")

[node name="Life3" parent="UI/TeamLifeSupply1" instance=ExtResource("3_gjw1o")]
position = Vector2(25, 7)
scale = Vector2(2, 2)
texture = ExtResource("4_0jpcu")

[node name="TeamLifeSupply2" type="Node2D" parent="UI"]
modulate = Color(1, 1, 1, 0.513726)
position = Vector2(1099, 626)

[node name="Life1" parent="UI/TeamLifeSupply2" instance=ExtResource("3_gjw1o")]
position = Vector2(-25, 7)
scale = Vector2(2, 2)
texture = ExtResource("5_hxww0")

[node name="Life2" parent="UI/TeamLifeSupply2" instance=ExtResource("3_gjw1o")]
position = Vector2(0, -5)
scale = Vector2(2, 2)
texture = ExtResource("5_hxww0")

[node name="Life3" parent="UI/TeamLifeSupply2" instance=ExtResource("3_gjw1o")]
position = Vector2(25, 7)
scale = Vector2(2, 2)
texture = ExtResource("5_hxww0")

[node name="Team1Victory" parent="UI" instance=ExtResource("4_drhtd")]
visible = false
position = Vector2(599, 276)

[node name="Team2Victory" parent="UI" instance=ExtResource("5_p4m3y")]
visible = false
position = Vector2(598, 275)

[node name="PlayerSpawnPoints" type="Node" parent="."]
editor_description = "This layer should be kept empty.
When players are actually ready'd on a map, they will imprint their initial spawn points as Marker2D children here.
If we ever choose to have different spawn points, we can add Marker2Ds to this layer and change this behavior."

[node name="OneShotAnimations" type="Node" parent="."]
editor_description = "Layer for adding animations, particles, effects etc"

[node name="Players" type="Node" parent="."]

[node name="Player 1" parent="Players" node_paths=PackedStringArray("bubbles_container", "map_oneshot_anims_container", "player_spawn_points_container") instance=ExtResource("1_eil7l")]
position = Vector2(463, 418)
player_num = 1
team_id = 1
color = Color(0.150753, 0.385059, 1, 1)
bubbles_container = NodePath("../../Bubbles")
map_oneshot_anims_container = NodePath("../../OneShotAnimations")
player_spawn_points_container = NodePath("../../PlayerSpawnPoints")

[node name="Player 2" parent="Players" node_paths=PackedStringArray("bubbles_container", "map_oneshot_anims_container", "player_spawn_points_container") instance=ExtResource("1_eil7l")]
position = Vector2(175, 599)
player_num = 2
team_id = 1
color = Color(0.00360018, 0.163797, 0.733516, 1)
bubbles_container = NodePath("../../Bubbles")
map_oneshot_anims_container = NodePath("../../OneShotAnimations")
player_spawn_points_container = NodePath("../../PlayerSpawnPoints")

[node name="Player 3" parent="Players" node_paths=PackedStringArray("bubbles_container", "map_oneshot_anims_container", "player_spawn_points_container") instance=ExtResource("1_eil7l")]
position = Vector2(702, 416)
player_num = 3
team_id = 2
color = Color(0.774574, 0.0233723, 0.683236, 1)
bubbles_container = NodePath("../../Bubbles")
map_oneshot_anims_container = NodePath("../../OneShotAnimations")
player_spawn_points_container = NodePath("../../PlayerSpawnPoints")

[node name="Player 4" parent="Players" node_paths=PackedStringArray("bubbles_container", "map_oneshot_anims_container", "player_spawn_points_container") instance=ExtResource("1_eil7l")]
position = Vector2(980, 597)
player_num = 4
team_id = 2
color = Color(0.524547, 0.00544727, 0.358245, 1)
bubbles_container = NodePath("../../Bubbles")
map_oneshot_anims_container = NodePath("../../OneShotAnimations")
player_spawn_points_container = NodePath("../../PlayerSpawnPoints")

[node name="Bubbles" type="Node" parent="."]

[node name="Platforms" type="Node2D" parent="." groups=["Platforms"]]

[node name="Platform1" type="StaticBody2D" parent="Platforms"]
position = Vector2(426, 379)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform1"]
position = Vector2(12.5, -1)
scale = Vector2(10.5888, 1.34372)
shape = SubResource("RectangleShape2D_gsn2s")

[node name="TextureRect" type="TextureRect" parent="Platforms/Platform1"]
offset_left = -88.0
offset_top = -15.0
offset_right = 112.0
offset_bottom = 13.0
texture = ExtResource("9_tcwpg")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Platform2" type="StaticBody2D" parent="Platforms"]
position = Vector2(616, 335)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform2"]
position = Vector2(12.5, -1)
scale = Vector2(10.5888, 1.34372)
shape = SubResource("RectangleShape2D_gsn2s")

[node name="TextureRect" type="TextureRect" parent="Platforms/Platform2"]
offset_left = -88.0
offset_top = -15.0
offset_right = 112.0
offset_bottom = 13.0
texture = ExtResource("9_tcwpg")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Hazards" type="Node" parent="."]

[node name="Spike" parent="Hazards" instance=ExtResource("2_2hbjn")]
position = Vector2(927, 391)
rotation = -1.5708
